--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,23 @@
 @import './base/settings';
 @import './base/base';
+@import './components/blog_form';
+@import './components/blog_guests';
+@import './components/blog_main_page';
+@import './components/enterprise';
+@import './components/features';
+@import './components/header_login_page';
+@import './components/loader';
+@import './components/login_main_page';
+@import './components/main_page__header';
+@import './components/footer.scss';
+@import './components/subsribe';
+@import './components/blog_post';
+@import './components/blog_items';
+@import './components/media_queary';
+
+
+
+
+
+
 
