--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,4 +1,57 @@
-body {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: $m-size;
+* 
+{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    scroll-behavior: smooth;
 }
+
+body 
+{
+    background-color:#fcfcfc;
+}
+
+.site-wrap 
+{
+    position: relative;
+    width: 1200px;
+    margin: 0% auto;
+    background:  #fcfcfc;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,.2);
+}
+
+
+.main_page__wrapper
+{
+    position: relative;
+    width: 1200px;
+    margin: 0% auto;
+    background:  #fcfcfc;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,.2);
+}
+
+.content__container 
+{
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    padding: $m-size $l-size;
+    max-width: 80rem;
+    text-align: start;
+}
+
+.page__header 
+{
+    background-color: #f5f5f5;
+    margin-bottom: $s-size;
+    padding: $l-size 0%;
+}
+
+.container_section  
+{
+    padding: 40px;
+}
+
+
+
